--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,19 @@
         <h1 class="text-2xl font-bold my-5">
             Simple Request Example
         </h1>
-        <button class="bg-blue-500 text-white py-2 my-5 rounded-lg">
+        <button 
+          hx-get="/users" 
+          hx-swap="outerHTML" 
+          hx-target="#users" 
+          hx-indicator="#loading"
+          hx-vals='{"limit":3}'
+          class="bg-blue-500 text-white py-2 my-5 rounded-lg">
             Fetch Users
         </button>
+        <span class="htmx-indicator" id="loading">
+          <img src="img/loader.gif" alt="Loading..." class="m-auto h-10" />
+        </span>
+        <div id="users"></div>
     </div>
 </body>
 
