--- a/public/request.html
+++ b/public/request.html
@@ -12,22 +12,18 @@
     </script>
     <title>HTMX</title>
 </head>
+
 <body>
     <div class="text-center">
         <h1 class="text-2xl font-bold my-5">
             Simple Request Example
         </h1>
-        <button 
-          hx-get="/users" 
-          hx-swap="outerHTML" 
-          hx-target="#users" 
-          hx-indicator="#loading"
-          hx-vals='{"limit":3}'
-          class="bg-blue-500 text-white py-2 my-5 rounded-lg">
+        <button hx-get="/users" hx-swap="outerHTML" hx-target="#users" hx-indicator="#loading" hx-vals='{"limit":3}'
+            class="bg-blue-500 text-white py-2 my-5 rounded-lg">
             Fetch Users
         </button>
         <span class="htmx-indicator" id="loading">
-          <img src="img/loader.gif" alt="Loading..." class="m-auto h-10" />
+            <img src="img/loader.gif" alt="Loading..." class="m-auto h-10" />
         </span>
         <div id="users"></div>
     </div>
