--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,57 @@
     <title>HTMX</title>
 </head>
 
-<body class="bg-blue-900 text-white min-h-screen flex items-center justify-center">
-    <div class="text-center">
-        <h1 class="text-xl mb-4">Weather In Amhedabad</h1>
-        <p class="text-5xl">
-            <span hx-get="/get-temperature" hx-trigger="every 5s">
-                Loading...
-            </span>
-        </p>
-    </div>
+<body class="bg-blue-900"> 
+<form class="max-w-md mx-auto p-6 bg-white rounded-lg shadow-lg mt-6">
+      <h1 class="text-2xl font-bold mb-4 text-center">Contact Us</h1>
+      <div class="mb-4" hx-target="this" hx-swap="outerHTML">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="email"
+          >Email Address</label
+        >
+        <input
+          name="email"
+          hx-post="/contact/email"
+          class="border rounded-lg py-2 px-3 w-full focus:outline-none focus:border-blue-500"
+          type="email"
+          id="email"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label
+          class="block text-gray-700 text-sm font-bold mb-2"
+          for="firstName"
+          >First Name</label
+        >
+        <input
+          type="text"
+          name="firstName"
+          class="border rounded-lg py-2 px-3 w-full focus:outline-none focus:border-blue-500"
+          id="firstName"
+          required
+        />
+      </div>
+      <div class="mb-6">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="lastName"
+          >Last Name</label
+        >
+        <input
+          type="text"
+          name="lastName"
+          class="border rounded-lg py-2 px-3 w-full focus:outline-none focus:border-blue-500"
+          id="lastName"
+          required
+        />
+      </div>
+      <div class="flex items-center justify-between">
+        <button
+          class="px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:bg-blue-600"
+          type="submit"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
 </body>
 
 </html>
